k8s/connection-manager.yaml
apiVersion: v1
kind: Service
metadata:
  name: connection-manager-service
spec:
  type: ClusterIP
  selector:
    component: connection-manager
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connection-manager-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: connection-manager
  template:
    metadata:
      labels:
        component: connection-manager
    spec:
      containers:
        - name: connection-manager
          image: connection-manager:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "250Mi"
              cpu: "250m"
            requests:
              memory: "250Mi"
              cpu: "250m"
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "app:app"]
          ports:
            - containerPort: 5000
