k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    component: order
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      component: order
  template:
    metadata:
      labels:
        component: order
    spec:
      containers:
        - name: order
          image: order:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "250Mi"
              cpu: "250m"
            requests:
              memory: "250Mi"
              cpu: "250m"
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "--timeout", "600", "--worker-class", "gevent", "--workers", "1", "--worker-connections", "100", "app:app"]
          ports:
            - containerPort: 5000
